--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "three": "^0.139.0"
   }
 }
